# ailog-cli

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  UNINSTALL.md  install.sh  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/demo/: demo.tape  make_demo_bugreport.py
src/ailog/: __init__.py  ai_client.py  analyzer.py  bugreport.py  build_wrapper.py  cli.py  config_manager.py  display.py  knowledge_pack.py  line_hints.py  logcat_wrapper.py
tests/: test_ai_client.py  test_bugreport.py  test_build_wrapper.py  test_config_manager.py  test_gen_vhal_knowledge.py  test_knowledge_pack.py  test_logcat_wrapper.py  test_security.py
tools/: gen_vhal_knowledge.py
