[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ailog-cli"
dynamic = ["version"]
description = "AI log triage for AOSP and Android Automotive developers — build errors, logcat, VHAL/CarService debugging"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Sanjayjith", email = "sanjayjith@users.noreply.github.com"}]
keywords = ["aosp", "android-automotive", "aaos", "automotive", "vhal", "android", "logcat", "adb", "ai", "debugging", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/zoddiacc/AILog"
Repository = "https://github.com/zoddiacc/AILog"
Issues = "https://github.com/zoddiacc/AILog/issues"

[project.scripts]
ailog = "ailog.cli:main"

[tool.setuptools.dynamic]
version = {attr = "ailog.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
